0.2

Implemented iterator protocol.

0.3

- Added support for arrays of strings

2007-03-30

implemented K._ja


2009-01-02

- Use k(0, ..) instead of dot() and aN() to improve compatibility
- Default to python 2.6
- Improvements to q script.p
- NUC: extra info on q errors 

2009-10-23

NUC: k3io
K(None) => k("::")